[package]
name = "tuicom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
crossterm = "0.26.1"
itertools = "0.10.5"
phf = { version = "0.11.1", features = ["macros"] }
ratatui = "0.20.1"
serialport = "4.2.0"
thiserror = "1.0.40"
